14. Changed hierarchy of canvas directory: it has now `server', `codels'      and `autoconf' directories. This is more consistent with what is      generated.  13. Generate files in '.genom' directory, and move them to user      directories afterwards. This way it will be possible to implement      incremental patching for files that are both generated and modified      by users.  12. Modules files are now intalled in $(bindir)/$(module) and      $(libdir)/$(module).  11. Changed -i option so that it generates only user files. Handy for      bootstrapping a module.

--- a/Makefile.in
+++ b/Makefile.in
@@ -35,8 +35,8 @@ srcdir=		@srcdir@
 
 include config.mk
 
-dist_path= genom-$(GENOM_MAJOR).$(GENOM_MINOR)
-dist_name= genom-$(GENOM_MAJOR).$(GENOM_MINOR)
+dist_path= genom-$(GENOM_MAJOR).$(GENOM_MINOR)$(GENOM_REV)
+dist_name= genom-$(GENOM_MAJOR).$(GENOM_MINOR)$(GENOM_REV)
 
 config_files = \
 	config.mk		\
@@ -57,13 +57,22 @@ config_headers = \
 # --- Directory recursion -----------------------------------------------
 
 # order matters!
-SUBDIRS= lib src include canvas emacs scripts
+SUBDIRS= lib
+
+ifneq (yes,$(LIBSONLY))
+SUBDIRS+= src
+
 ifeq (yes,$(HAS_TCL))
 SUBDIRS+= tclserv/server tclserv/client
 endif
 ifneq (:,$(LATEX))
 SUBDIRS+= doc/user_guide
 endif
+
+SUBDIRS+= canvas emacs scripts
+endif
+
+SUBDIRS+= include
 
 make_subdirs= @for d in ${SUBDIRS}; do (cd $$d; ${MAKE} $@ ) || exit 2; done
 
