--- a/config.mk.in
+++ b/config.mk.in
@@ -33,8 +33,8 @@ host_cpu=	@host_cpu@
 # --- Version -----------------------------------------------------------
 
 GENOM_MAJOR=	1
-GENOM_MINOR=	0
-GENOM_REV=	C
+GENOM_MINOR=	1
+GENOM_REV=
 
 
 # --- Programs ----------------------------------------------------------
