21. Added a --with-kernel-includes option when configuring for RTAI, in      case kernel headers and RTAI headers are not in the same path.

--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -83,6 +83,7 @@ OBJDIR=		$(OSAPI)-obj
 OS_LIBS=	@OS_LIBS@
 
 RTAI_INC=	@RTAI_INC@
+KERNEL_INC=	@KERNEL_INC@
 
 TCL_CPPFLAGS=	@TCL_CPPFLAGS@
 TCL_LDFLAGS=	@TCL_LDFLAGS@ @TCL_LIB_FLAG@ @TCL_LIBS@
