--- a/configure.in
+++ b/configure.in
@@ -45,31 +45,6 @@ ROBOT_PROG_MKDEP
 
 dnl --- RTAI support ----------------------------------------------------
 dnl
-# AC_CHECK_RTAI_INCLUDES(var, path)
-AC_DEFUN([AC_CHECK_RTAI_INCLUDES],
-[
-   AC_MSG_CHECKING([for RTAI includes])
-   AC_CACHE_VAL(ac_cv_path_rtai,
-    [
-       IFS="${IFS= 	}"; ac_save_ifs="$IFS"; IFS=":"
-        ac_tmppath="$2:/usr/realtime/include:/usr/src/rtai/include"
-        for ac_dir in $ac_tmppath; do 
-            test -z "$ac_dir" && ac_dir=.
-            if eval test -f $ac_dir/rtai.h; then
-               eval ac_cv_path_rtai="$ac_dir"
-               break
-            fi
-       done
-       IFS="$ac_save_ifs"
-    ])
-   $1="$ac_cv_path_rtai"
-   if test -n "[$]$1"; then
-      AC_MSG_RESULT([$]$1)
-   else
-      AC_MSG_ERROR([cannot find RTAI includes], 2)
-   fi
-   AC_SUBST($1)
-])
 
 # configure options
 AC_ARG_WITH(rtai,
@@ -80,12 +55,17 @@ AC_ARG_WITH(rtai-includes,
            AC_HELP_STRING([--with-rtai-includes=DIR],
                [RTAI headers are in DIR]),
            [opt_rtai_includes=$withval])
+AC_ARG_WITH(linux-kernel-includes,
+           AC_HELP_STRING([--with-linux-kernel-includes=DIR],
+               [linux kernel headers are in DIR]),
+           [opt_lnxkern_includes=$withval])
 
 # make related stuff
 if test "x$opt_rtai" = "xyes"; then
    OSAPI=rtai
    AC_MSG_RESULT([Enabling RTAI kernel support])
    AC_CHECK_RTAI_INCLUDES(RTAI_INC, $opt_rtai_includes)
+   AC_CHECK_LINUXKERNEL_INCLUDES(LNXKERN_INC, $opt_lnxkern_includes)
 
 elif test "x$opt_rtai" = "xno"; then :
    OSAPI=posix
