Add GENOM_DEFINES and GENOM_INCLUDES in config.mk.in Add them both to CPPFLAGS in server and codels since   - both used genomDefines anyway   - since both use the SDI and/or types used by genom and as such they both need the -I flags   - do not add them to the CPPFLAGS in config.mk.in since some libraries included in the module source tree may want to use config.mk but not these flags
Clean the generation of these makefiles

--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -74,6 +74,8 @@ POSTERWRITE_LIB=	lib$module$PosterWrite.la
 OSAPI?=		@OSAPI@
 
 ENDIANNESS=	@ENDIANNESS@
+GENOM_DEFINES=  $genomDefines$
+GENOM_INCLUDES= $genomIncludes$
 CPPFLAGS=	@CPPFLAGS@
 CFLAGS=		@CFLAGS@
 LDFLAGS=	@LDFLAGS@
