--- a/config.mk.in
+++ b/config.mk.in
@@ -71,8 +71,8 @@ LDFLAGS=	@LDFLAGS@
 OSAPI=		@OSAPI@
 OS_LIBS=	@OS_LIBS@
 
-PORTLIB_INC=	@PORTLIB_INC@
-PORTLIB_LIB=	@PORTLIB_LIB@
+PORTLIB_CFLAGS=	@PORTLIB_CFLAGS@
+PORTLIB_LDFLAGS=	@PORTLIB_LDFLAGS@
 
 RTAI_INC=	@RTAI_INC@
 LNXKERN_INC=	@LNXKERN_INC@
