--- a/doc/user_guide/Makefile.in
+++ b/doc/user_guide/Makefile.in
@@ -84,10 +84,8 @@ endif
 
 .PHONY: clean
 clean:
-	rm -f $(genom_doc)
+	rm -f $(genom_doc) genom.toc genom.aux genom.loc genom.out
 
+distclean: clean
+	rm -f Makefile
 
-# --- depends -----------------------------------------------------------
-
-.PHONY: depends
-depends:
