--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -58,5 +58,9 @@ install: all
 		$(LTINSTALL) $(srcdir)/$$f $(bindir)/$$f;	\
 	done
 
-.PHONY: clean depends
-clean depends:;
+.PHONY: clean
+clean:;
+
+distclean: clean
+	rm -f Makefile
+
