--- a/tclserv/client/Makefile.in
+++ b/tclserv/client/Makefile.in
@@ -89,7 +89,7 @@ install:: $(pkgfile)
 clean:
 	rm -f pkgIndex.tcl
 
-distclean:
+distclean: clean
 	rm -f Makefile
 
 # --- dependencies ------------------------------------------------------
