--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -50,7 +50,6 @@ LTINSTALL_DATA=	$(topbuild)/libtool --mode=install $(INSTALL) -m 644
 
 SED=		sed
 
-
 # --- Libraries ---------------------------------------------------------
 
 # executables or modules
@@ -68,6 +67,13 @@ MODULE_LIB=		lib$module$Server.la
 USER_LIB=		lib$module$Codels.la
 POSTERWRITE_LIB=	lib$module$PosterWrite.la
 
+# --- Servers -----------------------------------------------------------
+$genomJOptionsAndServers$
+
+# --- Libraries required ------------------------------------------------
+
+SERVERS_CLIENT_LIB=  $serversClientLib$
+SERVERS_ENDIAN_LIB=  $(SERVERS_CLIENT_LIB)
 
 # --- Flags -------------------------------------------------------------
 
@@ -82,6 +88,7 @@ endif
 MODULES_ROOT=   @abs_top_srcdir@/..
 
 ENDIANNESS=	@ENDIANNESS@
+
 GENOM_DEFINES=  $genomDefines$
 GENOM_INCLUDES= $genomIncludes$
 CPPFLAGS=	@CPPFLAGS@ -D$(OSDEF)
